--- a/1-HTML-CSS-JavaScript/css/practice-styles.css
+++ b/1-HTML-CSS-JavaScript/css/practice-styles.css
@@ -14,10 +14,16 @@ h1 {
     font: 32px Garamond, Helvetica, serif;
     text-align: center;
 }
+h2 {
+    text-align: center;
+}
 
 table {
     width: 50%;
     text-align: center;
+    margin-left:auto;
+    margin-right: auto;
+
 }
 
 thead {
