--- a/1-HTML-CSS-JavaScript/css/practice-styles.css
+++ b/1-HTML-CSS-JavaScript/css/practice-styles.css
@@ -7,7 +7,10 @@ section {
     border: 1px solid black;
     padding: 10px 10px 10px 10px;
     display: block;
+    align-content: center;
+    text-align: center;
 }
+
 
 h1 {
     color: lime;
@@ -38,6 +41,8 @@ label {
 
 #submit-btn {
     display: block;
+    margin-right: auto;
+    margin-left: auto;
 }
 table,th,td {
     border: 1px solid black;
