--- a/1-HTML-CSS-JavaScript/css/profile-style.css
+++ b/1-HTML-CSS-JavaScript/css/profile-style.css
@@ -14,7 +14,7 @@ nav {
     width: 100%;
     color: white;
     font-size: 20px;
-    text-align: center;
+    text-align: right;
 }
 
 nav a {
@@ -24,9 +24,22 @@ nav a {
     text-align: right;
     
 }
+
+table {
+    align-content: center;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 20px;
+}
 a:link {
     text-decoration: none;
 }
 li {
     list-style-type: none;
+}
+
+th, td, table {
+    border: 1px solid black;
+    border-collapse: collapse;
 }
