changed carousel to buttons and js practice

--- a/2-Bootstrap/nucampsite/css/styles.css
+++ b/2-Bootstrap/nucampsite/css/styles.css
@@ -47,3 +47,8 @@ header h2 {
     border-top: none;
     padding: 10px;
 }
+
+/* avoid outlining in the arrordian */
+.btn:focus {
+    box-shadow: none;
+}
