--- a/2-Bootstrap/nucampsite/css/styles.css
+++ b/2-Bootstrap/nucampsite/css/styles.css
@@ -13,6 +13,9 @@ h2 {
 header h2 {
     color: #CEC8FF;
 }
+.modal h2 {
+    color: white;
+}
 
 .site-footer {
     background-image: linear-gradient(#CEC8FF, white);
