--- a/2-Bootstrap/nucampsite/css/styles.css
+++ b/2-Bootstrap/nucampsite/css/styles.css
@@ -1,57 +1,59 @@
 body {
-    font-family: "Open Sana", sans-serif;
-}
+  font-family: "Open Sans", sans-serif; }
 
 h1, h2, h3 {
-    font-family: "Lobster", cursive;
-}
+  font-family: "Lobster", cursive; }
 
 h2 {
-    color: #3406C5;
-}
+  color: #3046C5; }
 
 header h2 {
-    color: #CEC8FF;
-}
+  color: #CEC8FF; }
+
 .modal h2 {
-    color: white;
-}
+  color: white; }
 
 .site-footer {
-    background-image: linear-gradient(#CEC8FF, white);
-    padding: 20px
-}
+  background-image: linear-gradient(#CEC8FF, white);
+  padding: 20px; }
 
 .jumbotron {
-    margin: 0;
-    padding: 30px;
-    background-image: linear-gradient(to right, #5637DD, #3046C5, #60106B);
-    color: white;
-}
+  margin: 0;
+  padding: 30px;
+  background-image: linear-gradient(to right, #5637dd, #3046C5, #60106b);
+  color: white; }
 
 .row-content {
-    padding: 50px 0;
-    border-bottom-style: 1px ridge;
-    min-height: 200px;
-}
+  padding: 50px 0;
+  border-bottom-style: 1px ridge;
+  min-height: 200px; }
 
 .navbar {
-    background-color: #901CAD;
-}
+  background-color: #901CAD; }
+
+.carousel-caption {
+  background-color: rgba(0, 0, 0, 0.5); }
+
 /* 
 .tab-content {
     border: 1px solid #DDD;
     border-top: none;
     padding: 10px;
 } */
-
 .tab-content {
-    border: 1px solid #DDD;
-    border-top: none;
-    padding: 10px;
-}
+  border: 1px solid #DDD;
+  border-top: none;
+  padding: 10px; }
 
 /* avoid outlining in the arrordian */
 .btn:focus {
-    box-shadow: none;
-}
+  box-shadow: none; }
+
+.carousel {
+  border: solid #5637dd; }
+
+#carouselButton {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  z-index: 00; }
